nivasa-macros/tests/trybuild/controller_parameter_pipes_invalid_target.rs
#[nivasa_macros::pipe(nivasa_pipes::TrimPipe)]
fn helper() {}

fn main() {}
